feat: add gateway